// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line-chart-widget-form Renders \`line-chart-widget-form\` widget settings with custom props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    name="title"
    value="Map widget"
  />
  <field-periodic-refresh-stub
    form="[object Object]"
  />
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      value="[object Object]"
      withcolor="true"
      withexternal="true"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-title-stub
      label="Header"
      name="chart_title"
      placeholder="Header title"
      value="Chart title"
    />
    <field-quick-date-interval-type-stub
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <field-filters-stub
      addable="true"
      editable="true"
      filters="[object Object]"
      withentity="true"
    />
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</div>
`;

exports[`line-chart-widget-form Renders \`line-chart-widget-form\` widget settings with default props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    name="title"
    value=""
  />
  <!---->
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      value=""
      withcolor="true"
      withexternal="true"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-title-stub
      label="Header"
      name="chart_title"
      placeholder="Header title"
      value=""
    />
    <field-quick-date-interval-type-stub
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <!---->
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</div>
`;
